--- a/src/scroll-bar-indicator.module.css
+++ b/src/scroll-bar-indicator.module.css
@@ -7,16 +7,17 @@
 
 .scroll_bar {
     position: relative;
+    background:#b3b3b3;
     height: 2rem;
 }
   
 .scroll_indicator {
-    background: rgb(14, 179, 170);
+    background: #8e32ff;
     height: 2rem;
 }
 
 .scroll_info {
-    color:rgb(50, 50, 50);
+    color:#323232;
     font-size: 1rem;
     padding: 1rem;
 }
